--- a/app/src/main/res/layout/activity_attendee_list.xml
+++ b/app/src/main/res/layout/activity_attendee_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/primary_background_theme"
     tools:context=".ui.activity.AttendeeList">
     <LinearLayout
         android:layout_margin="16dp"
@@ -19,7 +20,7 @@
             <TextView
                 android:id="@+id/eventName"
                 android:textSize="24sp"
-                android:textColor="@color/black"
+                android:textColor="@color/textcolor"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
