--- a/app/src/main/res/layout/activity_event_qr_activity.xml
+++ b/app/src/main/res/layout/activity_event_qr_activity.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.EventQRActivity"
     android:orientation="vertical"
+    android:background="@color/primary_background_theme"
     android:gravity="center_horizontal"
     >
     <TextView
@@ -16,7 +17,7 @@
         android:fontFamily="@font/font_black"
         android:textSize="24sp"
         android:layout_margin="16dp"
-        android:textColor="@color/black"
+        android:textColor="@color/textcolor"
         />
     <ImageView
         android:id="@+id/eventQr"
@@ -32,7 +33,7 @@
         android:src="@drawable/ic_qr"
         />
     <TextView
-        android:textColor="@color/black"
+        android:textColor="@color/textcolor"
         android:gravity="center"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
