--- a/app/src/main/res/layout/fragment_home_placeholder.xml
+++ b/app/src/main/res/layout/fragment_home_placeholder.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#4B808080">
+    android:background="@color/primary_background_theme">
 
 
     <LinearLayout
@@ -57,57 +57,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-
-        <ImageView
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_gravity="center"
-            android:src="@drawable/baseline_brightness_1_24" />
-
         <TextView
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/your_activities"
-            android:fontFamily="@font/font_bold"
-            android:textColor="@color/black"
+            android:text="@string/past_events"
+            android:textColor="@color/textcolor"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp"
-        >
-
-        <Button
-            android:id="@+id/yourEventButton"
-            android:layout_marginStart="32dp"
-            android:layout_width="164dp"
-            android:layout_height="40dp"
-            android:background="@drawable/rounded_shape_black"
-            android:fontFamily="@font/font_bold"
-            android:text="@string/your_event"
-            android:textColor="@android:color/white"
-            />
-        <View
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-        <Button
-            android:background="@android:color/transparent"
-            android:id="@+id/participatedEventButton"
-            android:layout_marginEnd="32dp"
-            android:layout_width="164dp"
-            android:layout_height="40dp"
-            android:textStyle="bold"
-            android:fontFamily="@font/font_bold"
-            android:text="@string/joined_event"
-            />
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/view_full_history"
+            android:textColor="@color/textcolor"/>
     </LinearLayout>
 
     <LinearLayout
@@ -125,7 +90,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_shape_red"
-            app:cardBackgroundColor="#DDDDDD"
+            app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="16dp" >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -210,7 +175,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_shape_red"
-            app:cardBackgroundColor="#DDDDDD"
+            app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="16dp" >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -295,7 +260,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_shape_red"
-            app:cardBackgroundColor="#DDDDDD"
+            app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="16dp" >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -380,7 +345,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_shape_red"
-            app:cardBackgroundColor="#DDDDDD"
+            app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="16dp" >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -463,7 +428,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_shape_red"
-            app:cardBackgroundColor="#DDDDDD"
+            app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="16dp" >
             <LinearLayout
                 android:layout_width="match_parent"
