--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,19 +7,19 @@
     android:background="@color/primary_background_theme"
     >
 
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/font_black"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/setting"
-        android:textColor="@color/black"
+        android:fontFamily="@font/font_black"
+        android:textColor="@color/textcolor"
         android:textSize="34sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImg"
@@ -81,7 +81,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/user_name"
         android:fontFamily="@font/font_bold"
-        android:textColor="@color/black"
+        android:textColor="@color/textcolor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
