--- a/app/src/main/res/layout/item_attendee.xml
+++ b/app/src/main/res/layout/item_attendee.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/primary_background_theme">
 
     <androidx.cardview.widget.CardView
         app:cardBackgroundColor="@color/card"
@@ -40,20 +41,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textcolor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
                 <TextView
                     android:layout_marginHorizontal="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textcolor"
                     android:id="@+id/attendeeEmail"/>
                 <TextView
                     android:id="@+id/joinDate"
                     android:layout_margin="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/textcolor"
                     android:text="Joined at: 24 SEP 2024 06:53PM"/>
 
             </LinearLayout>
