--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/primary_background_theme">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -33,7 +34,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/event_name"
                     android:fontFamily="@font/font_bold"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textcolor"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -46,7 +47,7 @@
                     android:text="@string/host_name"
                     android:textSize="12sp"
                     android:fontFamily="@font/font_regular"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/textcolor"/>
 
                 <TextView
                     android:id="@+id/eventDate"
@@ -55,7 +56,7 @@
                     android:text="@string/event_date"
                     android:textSize="12sp"
                     android:fontFamily="@font/font_regular"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/textcolor" />
             </LinearLayout>
             <TextView
                 android:layout_gravity="center"
@@ -66,7 +67,7 @@
                 android:layout_marginBottom="4dp"
                 android:text="@string/attendance"
                 android:fontFamily="@font/font_regular"
-                android:textColor="@color/black" />
+                android:textColor="@color/textcolor" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
