--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--    Light mode-->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -11,14 +10,11 @@
     <color name="primary_background_theme">#E2E8E6E6</color>
     <color name="input">#bebebe</color>
     <color name="card_background">#d6d6d6</color>
-    <color name="navbar_background">#d7dbd8</color>
+    <color name="navbar_background">#FFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="card">#F0F3F4</color>
     <color name="navbar_item">#566573</color>
-
-<!--    new-->
-    <!--<color name="backgroundColorWhite">#FFFFFF</color>
-    <color name="backgroundColorBlack">#F2F3F4</color>
-    <color name="textColorWhite">#F2F3F4</color>
-    <color name="textColorBlack">#F2F3F4</color>-->
+    <color name="buttonColor">#000000</color>
+    <color name="textcolor">#000000</color>
+    <color name="background_buttonColor">#000000</color>
 </resources>
